Updated announcement email

--- a/tasks/email.erb
+++ b/tasks/email.erb
@@ -11,10 +11,10 @@ bundled in an easy to use gem for your own pleasure.
 
 == What's new?
 
-Even though Thin has been announced only 4 days ago, lots of things are happening:
+Even though Thin has been made public only 4 days ago, lots of things have happened since:
  * Ruby 1.9 compatibility
  * Better Rails adapter
- * Thin support included in Ramaze and Vintage frameworks
+ * Thin support included in Ramaze and Vintage frameworks (Thin can also run Rails, Camping, Merb and more)
  * Some bug fixes in header parsing
  
 And some amazing numbers:
