Updated announcement email

--- a/tasks/email.erb
+++ b/tasks/email.erb
@@ -31,11 +31,15 @@ win32 support is coming soon!
 
  sudo gem install thin
  
-(Might take some time for the gem mirrors to be updated, try adding
---source http://code.macournoyer.com to the command if it doesn't work)
+Might take some time for the gem mirrors to be updated, try adding
+--source http://code.macournoyer.com to the command if it doesn't work
 
-NOTE: if you installed a previous alpha version (if you have 0.5.2 already installed)
+If you installed a previous alpha version (if you have 0.5.2 already installed)
 uninstall it before: sudo gem uninstall thin
+
+WARNING:
+Thin is still alpha software, if you use it on your server you understand the
+risks that are involved.
  
 == Contribute
 
