Add EM install step in annoucement email.

--- a/tasks/email.erb
+++ b/tasks/email.erb
@@ -10,6 +10,9 @@ http://code.macournoyer.com/thin/
 
 == Get it!
 
+Thin now requires EventMachine 0.11 which is not yet released as a gem, so in the meantime:
+
+ sudo gem install eventmachine --source http://code.macournoyer.com
  sudo gem install thin
  
 Or using my mirror:
