Add EM 0.11 note in README too, aah well, isn't it out yet?!

--- a/tasks/email.erb
+++ b/tasks/email.erb
@@ -10,9 +10,12 @@ http://code.macournoyer.com/thin/
 
 == Get it!
 
-Thin now requires EventMachine 0.11 which is not yet released as a gem, so in the meantime:
+IMPORTANT: Until EventMachine 0.11.0 is out, you have to install it from trunk or from my gem server:
 
  sudo gem install eventmachine --source http://code.macournoyer.com
+ 
+Then install Thin from RubyForge:
+
  sudo gem install thin
  
 Or using my mirror:
