--- a/tasks/email.erb
+++ b/tasks/email.erb
@@ -1,40 +1,32 @@
 Hey all,
 
-Version <%= Thin::VERSION::STRING %> (codename <%= Thin::VERSION::CODENAME %>) of the fastest Ruby server is out!
-
-http://code.macournoyer.com/thin/
+Thin version <%= Thin::VERSION::STRING %> (codename <%= Thin::VERSION::CODENAME %>) is out!
 
 == What's new?
 
 <%= changelog %>
 
 == Get it!
-
-IMPORTANT: Until EventMachine 0.11.0 is out, you have to install it from trunk or from my gem server:
-
- sudo gem install eventmachine --source http://code.macournoyer.com
  
-Then install Thin from RubyForge:
+Install Thin from RubyForge:
 
- sudo gem install thin
+ gem install thin
  
 Or using my mirror:
 
- sudo gem install thin --source http://code.macournoyer.com
-
-WARNING:
-  Thin is still alpha software, if you use it on your server you understand the
-  risks that are involved.
+ gem install thin --source http://code.macournoyer.com
  
+To use Thin with UNIX domain sockets you need EventMachine 0.11.0 from my gem server:
+
+ gem install eventmachine --source http://code.macournoyer.com
+
 == Contribute
 
-If you're using Thin, let me know and I'll put your site on http://code.macournoyer.com/thin/users/
-
-Thin is driven by an active community of passionate coders and benchmarkers.
-Please join us, contribute or share some ideas in Thin Google Group:
-http://groups.google.com/group/thin-ruby/topics
-
-Also on IRC: #thin on freenode
+Site:  http://code.macournoyer.com/thin/
+Group: http://groups.google.com/group/thin-ruby/topics
+Bugs:  http://thin.lighthouseapp.com/projects/7212-thin
+Code:  http://github.com/macournoyer/thin
+IRC:   #thin on freenode
 
 Thanks to all the people who contributed to Thin, EventMachine, Rack and Mongrel.
 
