--- a/rakelib/email.erb
+++ b/rakelib/email.erb
@@ -1,6 +1,6 @@
 Hey,
 
-Thin version <%= Thin::VERSION::STRING %> (codename <%= Thin::VERSION::CODENAME %>) is out!
+Thin version <%= Thin::VERSION %> (codename <%= Thin::CODENAME %>) is out!
 
 == What's new?
 
